@@ -3,6 +3,7 @@ Changes for 3.4.12rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-9236] fixed timeselector period used to select 'all' values of particular item (miks)
 ...G...... [ZBX-13393] fixed agent compilation error on AlphaServer Tru64 5.1B (Andris)
 ..F....... [ZBX-13165] fixed Y-axis small value gradation issue in graphs (Ivo)
 ..F....... [ZBX-14575] fixed Norwegian locale key for windows (vmurzins)
@@ -1294,6 +1295,7 @@ Changes for 3.0.20rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-9236] fixed timeselector period used to select 'all' values of particular item (miks)
 ...G...... [ZBX-13393] fixed agent compilation error on AlphaServer Tru64 5.1B (Andris)
 .......PS. [ZBX-14566] fixed possible data loss due to MariaDB server restart (vso)
 .......PS. [ZBX-13010] fixed crash of poller processes in ODBC checks, simplified code (Andris, wiper)
